cluster/services/octoprint/octoprint-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: octoprint
  name: octoprint
  namespace: octoprint
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: octoprint
